# SoullessEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeHelper.cmake  CMakeLists.txt  README.md  Taskfile.yml  conanfile.txt
editor/: CMakeLists.txt
editor/include/soulless/: pch.hpp
editor/include/soulless/editor/: editor_app.h
editor/include/soulless/editor/windowing/: window.h
editor/src/: empt.cpp  main.cpp
editor/src/soulless/editor/: editor_app.cpp
editor/src/soulless/editor/windowing/: window.cpp
engine/: CMakeLists.txt
engine/include/soulless/engine/: pch.hpp
engine/include/soulless/engine/commons/: commons.h  macros.h  resultCodes.h
engine/include/soulless/engine/debugging/: logger.h
engine/include/soulless/engine/event/: event.h
engine/include/soulless/engine/imGui/: soullessImGui.h
engine/include/soulless/engine/memory/: memory.h  memory_tracker.h
engine/include/soulless/engine/memory/allocation/: allocation_utils.h  allocator.h  heap_allocator.h  linear_allocator.h  owned_alloc.h  pool_allocator.h
engine/include/soulless/engine/rendering/: renderer.h
engine/include/soulless/engine/windowing/: window.h
engine/src/: empt.cpp
engine/src/soulless/engine/debugging/: logger.cpp
engine/src/soulless/engine/memory/: memory_tracker.cpp
engine/src/soulless/engine/memory/allocation/: allocator.cpp  heap_allocator.cpp  linear_allocator.cpp  pool_allocator.cpp
engine/src/soulless/engine/rendering/: renderer.cpp
engine/src/soulless/engine/windowing/: window.cpp
launcher/: CMakeLists.txt
launcher/src/: main.cpp
vendors/imgui/: CMakeLists.txt
